cambio de color a un boton

--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -47,8 +47,8 @@ else
                         <td>@(reparacion.ConvertidoAVenta ? "Sí" : "No")</td>
                         <td>
                     <button type="button" class="btn btn-danger btn-lg eliminarBtn"  data-codigo-reparacion="@reparacion.CodigoReparacion" title="Eliminar reparación"></button>
-                    <button type="button" class="btn btn-primary btn-lg" data-codigo-reparacion="@reparacion.CodigoReparacion" ></button>
-                    <button type="button" class="btn btn-primary btn-lg convertirBtn"  data-codigo-reparacion="@reparacion.CodigoReparacion" ></button>
+                    <button type="button" class="btn btn-primary btn-lg" data-codigo-reparacion="@reparacion.CodigoReparacion" title="Ver Detalle"></button>
+                    <button type="button" class="btn btn-success btn-lg convertirBtn"  data-codigo-reparacion="@reparacion.CodigoReparacion" title="Convertir a Venta"></button>
                   
 
 
@@ -259,37 +259,7 @@ function guardarReparacion() {
 }
 
 
-$(document).ready(function() {
-  $('.eliminarBtn').click(function() {
-    var codigoReparacion = $(this).data('codigo-reparacion');
-    console.log(codigoReparacion); // Agregamos el console.log para mostrar el valor de codigoreparacion
-    $('#eliminarModal').modal('show');
-    $('#codigoReparacionEliminar').val(codigoReparacion);
-  });
-});
 
-$(document).ready(function() {
-  $('#confirmarEliminarBtn').click(function() {
-    var codigoReparacion = $('#codigoReparacionEliminar').val();
-    console.log('Código de reparación a eliminar: ' + codigoReparacion); // Muestra el código de reparación en la consola
-    $.ajax({
-      type: 'DELETE',
-      url: '@Url.Action("Delete", "Reparacion")',
-      data: {codigoReparacion: codigoReparacion},
-      success: function(data) {
-        console.log('Reparación eliminada correctamente'); // Muestra un mensaje de éxito en la consola
-        // Cierra el modal después de enviar la petición
-        $('#eliminarModal').modal('hide');
-        // Recarga la página después de cerrar el modal
-        location.reload();
-      },
-      error: function(xhr, status, error) {
-        // En caso de error, muestra el mensaje de error en la consola.
-        console.error(error);
-      }
-    });
-  });
-});
 
 $(document).ready(function() {
   $('.eliminarBtn').click(function() {
@@ -347,6 +317,4 @@ $(document).ready(function() {
     });
   });
 });
-
-
 </script>
