--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -22,7 +22,7 @@ else
 {
   
     <div class="table-responsive" >
- <table class="table table-bordered table-hover table-striped responsive-table blue" >
+ <table class="highlight" >
 
         <thead class="thead-dark">
             <tr>
