--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Text.Json
 @model List<Reparacion>
 
-
+    
 
 @{
     ViewData["Title"] = "Reparaciones";
@@ -20,7 +20,6 @@
 }
 else
 {
-  
     <div class="table-responsive" >
  <table class="striped" >
 
@@ -412,11 +411,25 @@ function llenarTablaDetalle(datos) {
 
 $(document).on('click', '.btn-eliminar-detalle', function() {
   var codigoDetalleReparacion = $(this).data('codigo-detalle-reparacion');
-  console.log('Código de detalle de reparación a eliminar:', codigoDetalleReparacion);
-  // Realizar aquí la llamada AJAX para eliminar el detalle de reparación correspondiente
+  console.log(codigoDetalleReparacion);
+  eliminadetalle(codigoDetalleReparacion);
 });
 
-;
+function eliminadetalle(codigoDetalleReparacion) {
+  $.ajax({
+    url: '/Reparacion/DeleteDetail',
+    data: { codigoDetalleReparacion: codigoDetalleReparacion },
+    type: 'DELETE',
+    success: function(response) {
+      // aquí puedes realizar alguna acción si la eliminación fue exitosa
+         llamardetalle($('#codigoReparacion').val());
+    },
+    error: function(error) {
+      console.log(error);
+    }
+  });
+}
+
 
 
 
