Revert "todo funcionando sin problemas"
This reverts commit a1b3fadb7f55f1f13f07a87161f92de3b51cbda1.

--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -373,10 +373,10 @@ function llamardetalle(codigoReparacion) {
     dataType: 'JSON',
     success: function(response) {
    
-   
+      console.log(response);
       if (response.status == true) {
         var datos = response.data;
-       
+        console.log('Datos recibidos:');
     
         llenarTablaDetalle(datos);
       } else {
@@ -429,7 +429,7 @@ function eliminadetalle(codigoDetalleReparacion) {
     success: function(response) {
         console.log("aca deberia");
 var codigoReparacion = $('#codigoReparacion').val();
- ;
+  console.log('Código de reparación:', codigoReparacion);
     llamardetalle(codigoReparacion);
 
     },
