--- a/Views/Inicio/Index.cshtml
+++ b/Views/Inicio/Index.cshtml
@@ -6,9 +6,49 @@
 
 <!-- Agregar el canvas para dibujar el gráfico -->
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<canvas id="chartVentasPorMes" width="50" height="20"></canvas>
-<canvas id="VendedoresMes" width="100" height="40"></canvas>
+<div class="graficos">
+  <h3>Ventas por Mes</h3>
+  <canvas id="chartVentasPorMes"></canvas>
+  <p><em>Este gráfico muestra las ventas totales por mes durante el año actual.</em></p>
+</div>
+
+<div class="graficos">
+  <h3>Vendedores por Mes</h3>
+  <canvas id="VendedoresMes"></canvas>
+  <p><em>Este gráfico muestra la cantidad de ventas realizadas por cada vendedor durante el año actual.</em></p>
+</div>
+
+<div class="graficos">
+  <h3>Vendedores en el Mes Actual</h3>
+  <canvas id="VendedoresMesActual"></canvas>
+  <p><em>Este gráfico muestra la cantidad de ventas realizadas por cada vendedor durante el mes actual.</em></p>
+</div>
+
+<div class="graficos">
+  <h3>Total de Ventas del Día</h3>
+  <canvas id="TotalVentasdia"></canvas>
+  <p><em>Este gráfico muestra la cantidad total de ventas realizadas en el día de hoy.</em></p>
+</div>
+
+
+
+<style>
+.tabla-graficos .graficos {
+  max-width: 50%;
+  height: auto;
+}
+
+  
+  .tabla-graficos td {
+    display: block;
+    text-align: center;
+  }
+}
+</style>
+
+
 <!-- Agregar el script que dibuja el gráfico -->
 <script>
 $(document).ready(function() {
